--- a/trunk/LaTeX/Skal sættes i rapport/FunctionDrawCubes.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/FunctionDrawCubes.tex
@@ -23,7 +23,7 @@ After the conditional expression, the dimensions of the input item is subtracted
 
 The next part of the function is where the Vectors are calculated and put together into a Polygon and inserted into the array of Polygons. Only the part where the first Polygon is calculated will be explained, because the three next is essentially the same, but with the vectors pointing in other directions, forming the other side of the cube which will be drawn.
 
-A Vector contains three points, x, y and z. It is these points that now will be calculated. Earlier four Vector arrays were created: points1, points2, points3, and points4. Each of these Vector arrays contains four vectors to form 1 side of the cube to drawn. 
+A Vector contains three points, x, y and z. It is these points that now will be calculated. Earlier four Vector arrays were created: points1, points2, points3, and points4. Each of these Vector arrays contains four vectors to form 1 side of the cube to be drawn. 
 
 Keep in mind that the y and z coordinates of the item to be drawn was inverted earlier. 
 
