--- a/trunk/LaTeX/Klar til at blive rettet af andre/Tests.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Tests.tex
@@ -16,10 +16,12 @@ The second test got interrupted because of some problems with loading one of the
 The second attempt on the second test was made a short time after the first attempt. This time there was no technical problems with the program, and the test was made without more serious problems. After the test the instructions was changed again to better describe some features in the program and also describe how to rotate and drag the 3D model in the 3D-viewer. Another thing that was changed was that you now have to write the weight limit in kg instead of gram. The mistake with the program asking if you want to save the lists after you have saved them by using the button was also fixed after the test. The "Reset"-button  was removed from the main window. The list in the 3D-viewer now sort the items so the ones on the bottom is in the top of the list now. The last thing that was changed was that an image of a suitcase was added in the "Manage Suitcases"-window and a picture of several items was added to the "Manage Items"-window.
 
 \section{The Second Round of Tests of the Program}
+In the second round of tests we tested two test persons. Some small improvements to the test method was made in this round of tests. The instructions about what would happen in the test was written down instead of just told so the test person would not forget the instructions, and and the instructions was improved so they were easier to understand.
 
 The second round of tests was made a week after the second test. The test went without any technological problems and was an success. After the two tests the following was changed. Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is the bottom in the suitcase has been added in the 3D-viewer. The little box showing the (0,0,0)-coordinate has been described in the 3D-viewer too. The problem about a lot of items being packed upright was been solved and the algorithm has been optimized. A better description on how to add more of the same thing has been added to the instructions. If you are managing a already saved list and click the "Save list to Computer"-button the program will now ask if you want to overwrite your saved list. In the 3D-viewer the unit for the suitcase(s) weight has been added. 
 
-standard items drop down
+\section{Conclusion on the Tests}
+The test went well and the group got some good feedback that lead to some great improvements to the program and the bugs in the program was fixed. Most of the test persons found the program useful if they had to pack a lot to a vacation. Testing more than once proved a very good idea since all the test persons had good suggestions to improvements and found minor bugs that quickly was fixed. If anything should be better next time the group should test it was to be sure to write down the instructions to the test person and be sure everything is ready for the test person. But all in all some very successful tests.
 
 
 
