--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -60,12 +60,10 @@
 \input{indhold/design/Specificationrequirement.tex}
 \input{indhold/design/Solutionsuggestions.tex}
 \input{indhold/design/programplanning.tex}
-\input{indhold/design/ThePackingAlgorithm.tex}%
 
 \chapter{Development}
 \label{chap:development}
 \input{indhold/development/developmentintro.tex}
-\input{indhold/development/ColorGiver.tex}
 \input{indhold/development/FunctionDrawCubes.tex}
 
 \chapter{Testing} 
@@ -74,6 +72,9 @@
 
 \chapter{Discussion}
 \label{chap:Discussion}
+
+\chapter{Conclusion}
+\label{chap:conclusion}
 %conclusion mangler
 
 %%%% Kilder %%%%
@@ -85,8 +86,8 @@
 
 %%%% Fixme-listen %%%%
 
-%\newpage
-%\listoffixmes	% Fixme-listen - fjernes til sidst i projektet med "%"
+\newpage
+\listoffixmes	% Fixme-listen - fjernes til sidst i projektet med "%"
 
 \clearforchapter
 
