--- a/LaTeX/Skal sættes i rapport/GUIdescription.tex
+++ b/LaTeX/Skal sættes i rapport/GUIdescription.tex
@@ -5,13 +5,13 @@ The main interface window of the program looks like this.
 
 \figur{0.5}{Mainwindow.png}{Main window}{fig:Main}
 
-The main window contains the instructions on how to use the program, an "About" button which tells who the creators are and what they do. A "Manage Items" and "Manage Suitcases" button where the user can add/edit items/suitcases. The button "Load Saved List" can be used if the user have previously made a list and wants to use it and/or add/edit some items or suitcases from the list. The "Start Packing" button initiates the program's algorithm and packs the suitcase(s). The progress bar is associated with the "Start Packing" button and starts when the user presses the button.
+The main window contains the instructions on how to use the program, an "About" button which tells who the creators are and what they do. A "Manage Items" and "Manage Suitcases" button where the user can add/edit/delete items/suitcases. The button "Load Saved List" can be used if the user have previously made a list and wants to use it and/or add/edit some items or suitcases from the list. The "Start Packing" button initiates the program's algorithm and packs the suitcase(s). The progress bar is associated with the "Start Packing" button and starts when the user presses the button.
 
 \figur{0.5}{ManageItems.png}{Manage items window}{fig:ManageItems}
-The Manage Items menu is where the user can add and/or edit items.
+The Manage Items menu is where the user can add, delete and/or edit items.
 
 \figur{0.5}{ManageSuitcase.png}{Manage suitcase window}{fig:ManageSuitcase}
-Add/edit suitcases in the Manage Suitcase menu.
+Add/delete/edit suitcases in the Manage Suitcase menu.
 
 \figur{0.5}{About.png}{About window}{fig:About}
 The About button which tells who the programmers are, and when the program was made.
@@ -20,7 +20,7 @@ The About button which tells who the programmers are, and when the program was m
 When the user presses the "Add Item" button in Manage Items, this form shows. In the form there is a text box, where the user types the name of the current item. There are 5 other text boxes which are for the length, width, height, weight, and number of items.
 
 \figur{0.2}{AddSuitcase.png}{Add suitcase window}{fig:AddSuitcase}
-When the user presses the "Add Suitcase" button in Manage Suitcases, the user can add and/or edit a suitcase's data. The length, width, height, weight, and the maximum weight of the suitcase. 
+When the user presses the "Add Suitcase" button in Manage Suitcases, the user can add a new suitcase. The data needed is the length, width, height, weight, and the maximum weight of the suitcase. 
 
 \figur{0.2}{EditItem.png}{Edit item window}{fig:EditItem}
 If the user wants to edit an item, he/she can press the "Edit Item" button in Manage Items, and this form shows. In the form there are 6 text boxes for each input parameter, and a button saying "Edit", which saves the changes the user has made and closes the form.
@@ -31,13 +31,13 @@ In "Manage Suitcase", there is a button called "Edit Suitcase". It allows the us
 \figur{0.5}{LoadSavedLists.png}{Load List}{fig:LoadList}
 If the user already have used the program before and have saved an item list and a suitcase list, both can be loaded here.
 
-\subsection{3D viewer}
-The 3D viewer shows how the program have packed the different items in the suitcases.
+\subsection{3D-viewer}
+The 3D-viewer shows how the program have packed the different items in the suitcases.
 
 \figur{0.5}{frm3DViewer.png}{3D Viewer window}{fig:3dViewer}
 
-This is the first thing the user will see when packing starts. It shows how the items are placed in the suitcase.
-The image can be dragged, moved, and zoomed with the mouse, as seen below. When the user clicks on an item in the list on the right side, the marked item will be highlighted in the image. Below the list are the xyz-points to see where the item's supposed to be placed, and the current suitcase's weight. 
+This is the first thing the user will see when the packing starts. It shows how the items are placed in the suitcase.
+The image can be dragged, moved, and zoomed with the mouse, as seen below. When the user clicks on an item in the list on the right side, the marked item will be highlighted in the image. Below the list are the xyz-points to see where the item is supposed to be placed, and the current suitcase's weight. 
 
 \figur{0.5}{frm3DViewer2.png}{3D Viewer2 window}{fig:3dViewer2}
 
